--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<body>
 		<h1>Hello Wrld</h1>
 		<p>I'm hosted with GitHub Pages.</p>
+		<p id="demo"></p>
 		<script>
 		var myObj, myJSON, text, obj;
 		//Storing data:
