--- a/index.html
+++ b/index.html
@@ -3,44 +3,193 @@
 	<head>
 		<title>byuan45.github.io</title>
 		<link rel="stylesheet" type="text/css" href="mystyle.css">
+		// Script for Vertical Bar Chart
+		<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    	<script type="text/javascript">
+      		google.charts.load('current', {'packages':['bar']});
+      		google.charts.setOnLoadCallback(drawStuff);
+     	function drawStuff() {
+        	var data = new google.visualization.arrayToDataTable([
+	          ['Galaxy', 'Distance', 'Brightness'],
+	          ['Canis Major Dwarf', 8000, 23.3],
+	          ['Sagittarius Dwarf', 24000, 4.5],
+	          ['Ursa Major II Dwarf', 30000, 14.3],
+	          ['Lg. Magellanic Cloud', 50000, 0.9],
+	          ['Bootes I', 60000, 13.1]
+        	]);
+	        var options = {
+	        	width: 800,
+	          	chart: {
+	            title: 'Nearby galaxies',
+	            subtitle: 'distance on the left, brightness on the right'
+	        	},
+		        bars: 'horizontal', // Required for Material Bar Charts.
+		        series: {
+		        	0: { axis: 'distance' }, // Bind series 0 to an axis named 'distance'.
+		            1: { axis: 'brightness' } // Bind series 1 to an axis named 'brightness'.
+		        },
+		        axes: {
+		        	x: {
+		            	distance: {label: 'parsecs'}, // Bottom x-axis.
+		            	brightness: {side: 'top', label: 'apparent magnitude'} // Top x-axis.
+		            }
+		       	}
+	        };
+      		var chart = new google.charts.Bar(document.getElementById('dual_x_div'));
+      		chart.draw(data, options);
+    	};
+    	</script>
+    	// Script for Horizontal Bar Chart
+    	<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    	<script type="text/javascript">
+      		google.charts.load('current', {'packages':['bar']});
+      		google.charts.setOnLoadCallback(drawChart);
+      		function drawChart() {
+		        var data = google.visualization.arrayToDataTable([
+		        	['Year', 'Sales', 'Expenses', 'Profit'],
+		        	['2014', 1000, 400, 200],
+		          	['2015', 1170, 460, 250],
+		          	['2016', 660, 1120, 300],
+		         	['2017', 1030, 540, 350]
+		        ]);
+		        var options = {
+		        	chart: {
+		            title: 'Company Performance',
+		            subtitle: 'Sales, Expenses, and Profit: 2014-2017',
+		          	}
+	        	};
+	        	var chart = new google.charts.Bar(document.getElementById('columnchart_material'));
+	        	chart.draw(data, google.charts.Bar.convertOptions(options));
+      		}
+    	</script>
+    	// Script for Line Graph
+    	<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    	<script type="text/javascript">
+      		google.charts.load('current', {'packages':['line']});
+      		google.charts.setOnLoadCallback(drawChart);
+			function drawChart() {
+		      	var data = new google.visualization.DataTable();
+		      	data.addColumn('number', 'Day');
+		      	data.addColumn('number', 'Guardians of the Galaxy');
+			    data.addColumn('number', 'The Avengers');
+			    data.addColumn('number', 'Transformers: Age of Extinction');
+			    data.addRows([
+			        [1,  37.8, 80.8, 41.8],
+			        [2,  30.9, 69.5, 32.4],
+			        [3,  25.4,   57, 25.7],
+			        [4,  11.7, 18.8, 10.5],
+			        [5,  11.9, 17.6, 10.4],
+			        [6,   8.8, 13.6,  7.7],
+			        [7,   7.6, 12.3,  9.6],
+			        [8,  12.3, 29.2, 10.6],
+			        [9,  16.9, 42.9, 14.8],
+			        [10, 12.8, 30.9, 11.6],
+			        [11,  5.3,  7.9,  4.7],
+			        [12,  6.6,  8.4,  5.2],
+			        [13,  4.8,  6.3,  3.6],
+			        [14,  4.2,  6.2,  3.4]
+			    ]);
+			    var options = {
+			  	    chart: {
+			        	title: 'Box Office Earnings in First Two Weeks of Opening',
+			        	subtitle: 'in millions of dollars (USD)'
+			        },
+			        width: 200,
+			        height: 200,
+			        axes: {
+			        	x: {
+			            0: {side: 'top'}
+			          	}
+			        }
+	      		};
+      			var chart = new google.charts.Line(document.getElementById('line_top_x'));
+				chart.draw(data, google.charts.Line.convertOptions(options));
+    		}
+  		</script>
+  		// Script for Pie Chart
+  		<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+		<script type="text/javascript">
+			// Load google charts
+			google.charts.load('current', {'packages':['corechart']});
+			google.charts.setOnLoadCallback(drawChart);
+			// Draw the chart and set the chart values
+			function drawChart() {
+				var data = google.visualization.arrayToDataTable([
+				['Task', 'Hours per Day'],
+			    ['Work', 8],
+			    ['Friends', 2],
+		     	['Eat', 2],
+				['TV', 2],
+				['Gym', 2],
+				['Sleep', 8]
+				]);
+				// Optional; add a title and set the width and height of the chart
+				var options = {'width':150, 'height':150};
+			  	// Display the chart inside the <div> element with id="piechart"
+			  	var chart = new google.visualization.PieChart(document.getElementById('piechart'));
+			  	chart.draw(data,options);
+			}
+		</script>
 	</head>
 	<body>
-		<h1 style="text-align:center;">
+		<h1>
 			Bike Sharing in Los Angeles
 		</h1>
-		<p style="text-align:center;">
+		<p1>
 			Bike shares are becoming increasingly common in cities in the United States. Commuters have been using bike sharing as a method of transportation for the flexibility, cost savings, exercise, and a myriad of other benefits. While being quite successful, many bike shares are still relatively new and have room for optimization. This website is dedicated to analyzing and visualizing bike share data from the city of Los Angeles.
-		</p>
-		<h3 style="text-align:left;">
+		</p1>
+		<h3>
 			Graph 1: Passholder Type vs duration
 			<span style="float:right;">
 			Ranking of Popular Start/Stop Locations
-		</span></h3>
-		<p2 style="text-align:left;">
-			BAR GRAPH 1
-			<span style="float:right;">
-			TABLE 1 
-		</span></p2>
-		<h3 style="text-align:left;">
+			</span>
+		</h3>
+    	<div id="dual_x_div" style="width: 500px; height: 300px; float: left"></div>
+		<ol class="c" style="float:right;">
+			<li><p><b><a href="https://en.wikipedia.org/wiki/Coffee" target="_blank">Coffee</a></b></p></li>
+			<li>Coca Cola</li>
+		</ol>
+		<h3>
 			Graph 2: Bike ID vs Distance
 			<span style="float:right;">
-			Average Distance Table
-		</span></h3>
-		<p2 style="text-align:left;">
-			PIE GRAPH 2
-			<span style="float:right;">
-			TABLE 2
-		</span></p2>
-		<h3 style="text-align:left;">
+			Distance Information
+			</span>
+		</h3>
+    	<div id="columnchart_material" style="width: 800px; height: 500px; float: left;"></div>
+		<table style="float:right;">
+  			<tr>
+    			<th>Passholder Type</th>
+    			<th>Total Distance</th>
+    			<th>Average Distance</th>
+ 			</tr>
+  			<tr>
+			    <td>Monthly</td>
+			    <td>2</td>
+			    <td>3</td>
+			</tr>
+			<tr>
+			    <td>Flex</td>
+			    <td>6</td>
+			    <td>7</td>
+		 	</tr>
+		 	<tr>
+			    <td>Walk-Up</td>
+			    <td>10</td>
+			    <td>11</td>
+		 	</tr>
+		 	<tr>
+			    <td>Total</td>
+			    <td>14</td>
+			    <td>15</td>
+		 	</tr>
+		</table>
+		<h3>
 			Graph 3: Month vs number of bikes used
 			<span style="float:right;">
 			Seasonal Pie Chart
 		</span></h3>
-		<p2 style="text-align:left;">
-			LINE GRAPH 3
-			<span style="float:right;">
-			SEASONAL PIE CHART 3
-		</span></p2>
+   		<div id="line_top_x" style="float: left;"></div>
+		<div id="piechart" style="float: right;"></div>
 	</body>
 </html>
 
