--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>byuan45.github.io</title>
 		<link rel="stylesheet" type="text/css" href="mystyle.css">
-		// Script for Vertical Bar Chart
+		<!-- Script for Vertical Bar Chart -->
 		<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     	<script type="text/javascript">
       		google.charts.load('current', {'packages':['bar']});
@@ -39,7 +39,7 @@
       		chart.draw(data, options);
     	};
     	</script>
-    	// Script for Horizontal Bar Chart
+    	<!-- Script for Horizontal Bar Chart -->
     	<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     	<script type="text/javascript">
       		google.charts.load('current', {'packages':['bar']});
@@ -62,7 +62,7 @@
 	        	chart.draw(data, google.charts.Bar.convertOptions(options));
       		}
     	</script>
-    	// Script for Line Graph
+    	<!-- Script for Line Graph -->
     	<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     	<script type="text/javascript">
       		google.charts.load('current', {'packages':['line']});
@@ -106,7 +106,7 @@
 				chart.draw(data, google.charts.Line.convertOptions(options));
     		}
   		</script>
-  		// Script for Pie Chart
+  		<!-- Script for Pie Chart -->
   		<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 		<script type="text/javascript">
 			// Load google charts
