--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>byuan45.github.io</title>
+		<title>byuan45.github.io.</title>
 		<link rel="stylesheet" type="text/css" href="mystyle.css">
 		<!-- Script for Vertical Bar Chart -->
 		<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
@@ -183,7 +183,7 @@
 			    <td>15</td>
 		 	</tr>
 		</table>
-		<h3>
+		<h3 style="clear: both">
 			Graph 3: Month vs number of bikes used
 			<span style="float:right;">
 			Seasonal Pie Chart
