--- a/index2.0.html
+++ b/index2.0.html
@@ -9,8 +9,7 @@
 			<h1 id="Title">
 				Bike Sharing in Los Angeles
 			</h1>
-		</header>
-		<script>
+			<script>
 			var header = document.querySelector('header');
 			var title = document.createElement('h3');
 			    title.textContent = 'Created by Brandon Yuan';
@@ -18,5 +17,29 @@
 			var detail = document.createElement('p');
 			    detail.textContent = 'Bike shares are becoming increasingly common in cities in the United States. Commuters have been using bike sharing as a method of transportation for the flexibility, cost savings, exercise, and a myriad of other benefits. While being quite successful, many bike shares are still relatively new and have room for optimization. This website is dedicated to analyzing and visualizing bike share data from the city of Los Angeles.'
 			    header.appendChild(detail)
-		</script>
+			</script>
+		</header>
+		
+        <section>
+        	<h4 class= 'subtitles'>
+			Passholder Type vs Time Duration
+			<span style="float:right;">
+			Ranking of Popular Start/Stop Locations
+			</span>
+			</h4>
+			<h4 class= 'subtitles'>
+			Bike ID vs Distance
+			<span style="float:right;">
+			Distance Information
+			</span>
+			</h4>
+			<h4 class= 'subtitles'>
+			Number of Bikes used each Month
+			<span style="float:right;">
+			Bikes used each Season
+			</span>
+			</h4>
+
+        </section>
+
 	</body>
