--- a/index2.0.html
+++ b/index2.0.html
@@ -22,24 +22,75 @@
 		
         <section>
         	<h4 class= 'subtitles'>
-			Passholder Type vs Time Duration
-			<span style="float:right;">
-			Ranking of Popular Start/Stop Locations
-			</span>
+				Passholder Type vs Time Duration
+				<span style="float:right;">
+				Ranking of Popular Start/Stop Locations
+				</span>
+			</h4>
+			
+			<h4 class= 'subtitles'>
+				Bike ID vs Distance
+				<span style="float:right;">
+				Distance Information
+				</span>
 			</h4>
 			<h4 class= 'subtitles'>
-			Bike ID vs Distance
-			<span style="float:right;">
-			Distance Information
-			</span>
-			</h4>
-			<h4 class= 'subtitles'>
-			Number of Bikes used each Month
-			<span style="float:right;">
-			Bikes used each Season
-			</span>
+				Number of Bikes used each Month
+				<span style="float:right;">
+				Bikes used each Season
+				</span>
 			</h4>
 
         </section>
+        	   <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+  <div id="chart_div"></div>
+      <script type="text/javascript">
+      	var obj, dbParam, xmlhttp, myObj, x, txt = "";
+obj = { "table":"customers", "limit":10 };
+dbParam = JSON.stringify(obj);
+xmlhttp = new XMLHttpRequest();
+
+xmlhttp.onreadystatechange = function() {
+    if (this.readyState == 4 && this.status == 200) {
+        myObj = JSON.parse(this.responseText);
+
+            txt += myObj.createdAt;
+ 
+        google.charts.load('current', {packages: ['corechart']});
+google.charts.setOnLoadCallback(drawChart);
+        function drawChart() {
+      var data = new google.visualization.DataTable();
+      data.addColumn('string', 'Topping');
+        data.addColumn('number', 'Slices');
+        data.addRows([
+          ['Mushrooms', myObj.columns[0].position],
+          ['Onions', 1],
+          ['Olives', 1],
+          ['Zucchini', 1],
+          ['Pepperoni', 2]
+        ]);
+
+      var options = {'title':'How Much Pizza I Ate Last Night',
+                       'width':400,
+                       'height':300};
+
+      var chart = new google.visualization.ColumnChart(
+        document.getElementById('chart_div'));
+
+      chart.draw(data, options);
+    }
+        document.getElementById("demo").innerHTML = txt;
+    }
+};
+xmlhttp.open("GET", 'https://byuan45.github.io/socrata_metadata.json', true);
+xmlhttp.send();
+
+</script>
+    
+
+
+   
+  </script>
+
 
 	</body>
