--- a/index2.0.html
+++ b/index2.0.html
@@ -27,61 +27,102 @@
 				Ranking of Popular Start/Stop Locations
 				</span>
 			</h4>
-			<div id="PassVsDuration"></div>
+			<div id="foo"style="float:right"></div>
+			<div id="PassHolderTypeVsDuration"></div>
+
+
 			<h4 class= 'subtitles'>
 				Bike ID vs Distance
 				<span style="float:right;">
 				Distance Information
 				</span>
 			</h4>
-			<div id="chart_div"></div>
+			<div id="IDvsDuration"></div>
 			<h4 class= 'subtitles'>
 				Number of Bikes used each Month
 				<span style="float:right;">
 				Bikes used each Season
 				</span>
 			</h4>
+			<div id="chart"style="float:left";></div>
+			<span style="float:right;">
+			<div id="Seasonal"></div>
+			<div id="foo"></div>
+			
         </section>
         <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
   		<script type="text/javascript">
       		var xmlhttp, myObj  = "";
-      		var y = 0;
-      		var x = 0;
-      		var z = 0;
 			xmlhttp = new XMLHttpRequest();
 			xmlhttp.onreadystatechange = function() {
     		if (this.readyState == 4 && this.status == 200) {
         		myObj = JSON.parse(this.responseText);
+        		//drawing Google Charts and Graphs
         		google.charts.load('current', {packages: ['corechart']});
 				google.charts.setOnLoadCallback(drawColumnChart1);
 				google.charts.setOnLoadCallback(drawColumnChart2);
-				for ( var i = 0; i < myObj.length; i++) {
-					if (myObj[i]['Passholder Type'] == "Monthly Pass"){
-						y += parseInt(myObj[i].Duration);
-					} else if (myObj[i]['Passholder Type'] == "Flex Pass"){
-						x += parseInt(myObj[i].Duration);
-					} else {
-						z += parseInt(myObj[i].Duration);
+				google.charts.setOnLoadCallback(drawColumnChart3);
+				google.charts.setOnLoadCallback(drawPieChart);
+				
+        		// create an array of most popular starting locations
+        		var Start = [[0,0]];
+					for (var i = 0; i < myObj.length; i++) {
+						for (var x = 0; x < Start.length; x++){
+							if( Start[x][0] == myObj[i]['Starting Station ID']){
+								Start[x][1] ++;
+								break;
+							} else if (x == Start.length - 1 ) {
+								var t = [myObj[i]['Starting Station ID'], 0]
+								Start.push(t);
+							}
+						}
 					}
+				// create a list of most popular starting locations
+				function makeUL(array) {
+    				var list = document.createElement('ul');
+				    for(var i = 0; i < array.length; i++) {
+				        var item = document.createElement('li');
+        				item.appendChild(document.createTextNode(array[i]));
+        				list.appendChild(item);
+    				}	
+				    return list;
 				}
+				document.getElementById('foo').appendChild(makeUL(Start[0]));
+
+
+        		// Column Chart for Passholder Type vs Time
         		function drawColumnChart1() {
+					var MonthlyDuration = 0;
+      				var FlexDuration = 0;
+      				var WalkInDuration = 0;
+        			for ( var i = 0; i < myObj.length; i++) {
+						if (myObj[i]['Passholder Type'] == "Monthly Pass"){
+							MonthlyDuration += parseInt(myObj[i].Duration);
+						} else if (myObj[i]['Passholder Type'] == "Flex Pass"){
+							FlexDuration += parseInt(myObj[i].Duration);
+						} else {
+							WalkInDuration += parseInt(myObj[i].Duration);
+						}
+					}
       				var data = new google.visualization.DataTable();
-      				data.addColumn('string', 'Type');
+      				var Total = MonthlyDuration + FlexDuration + WalkInDuration;
+      				data.addColumn('string', 'PassholderType');
         			data.addColumn('number', 'Duration (Seconds)');
         			data.addRows([
-			          ['Monthly', y],
-			          ['Flex', x],
-			          ['Walk-In', z],
-			          ['Total', x+y+z]
+			        	['Monthly', MonthlyDuration],
+			        	['Flex', FlexDuration],
+			        	['Walk-In', WalkInDuration],
+			        	['Total', Total]
         			]);
       				var options = {
                     	'width':400,
                     	'height':300};
       				var chart = new google.visualization.ColumnChart(
-        			document.getElementById('PassVsDuration'));
+        				document.getElementById('PassHolderTypeVsDuration'));
 					chart.draw(data, options);
 				}
 	
+				// Column Chart for Bike ID vs Time
         		function drawColumnChart2() {
         			var BikeID = [[1,2]];
 					for (var i = 0; i < myObj.length; i++) {
@@ -90,15 +131,13 @@
 								BikeID[x][1] += parseInt(myObj[i].Duration);
 								break;
 							} else if (x == BikeID.length - 1 ) {
-								var t = [myObj[i]['Bike ID'], 0]
-								BikeID.push(t);
+								var newBike = [myObj[i]['Bike ID'], 0]
+								BikeID.push(newBike);
+							}	
 						}
-
 					}
-
-				}
       				var data = new google.visualization.DataTable();
-      				data.addColumn('string', 'Type');
+      				data.addColumn('string', 'BikeID');
         			data.addColumn('number', 'Duration (Seconds)');
         			for (var i = 1; i < BikeID.length; i++){
 						data.addRow(
@@ -109,19 +148,64 @@
                     	'width':500,
                     	'height':300};
       				var chart = new google.visualization.ColumnChart(
-        			document.getElementById('chart_div'));
+        				document.getElementById('IDvsDuration'));
 					chart.draw(data, options);
 				}
 
+				// array of amount of times bikes are used each month
+				var Months = [[1,0, 'Jan'],[2,0, 'Feb'],[3,0, 'Mar'],[4,0, 'Apr'],
+							[5,0, 'May'],[6,0, 'Jun'],[7,0, 'Jul'],[8,0, 'Aug'],
+							[9,0, 'Sep'],[10,0, 'Oct'],[11,0, 'Nov'],[12,0, 'Dec']];
+          		for (var i = 0; i < myObj.length; i++) {
+            		for (var x = 0; x < Months.length; x++){
+              			var everything =  myObj[i]['Start Time'];
+              			var month = everything.slice(5,7);
+              			if( Months[x][0] == parseInt(month)){
+                			Months[x][1]++;
+              			} 
+            		}
+          		}
+
+          		// graph of amount of times bikes are used each month
+				function drawColumnChart3() {	
+              		var data = new google.visualization.DataTable();
+              		data.addColumn('string', 'Months');
+              		data.addColumn('number', 'Duration (Seconds)');
+              		for (var i = 0; i < Months.length; i++){
+           				data.addRow(
+                  			[Months[i][2], Months[i][1]]  
+                  			);
+              		}		
+      				var options = {
+                    	'width':500,
+                    	'height':300};
+      				var chart = new google.visualization.LineChart(
+        				document.getElementById('chart'));
+					chart.draw(data, options);
+				}
+
+				//graoh of amount of times bikes are used each season
+				function drawPieChart() {		
+              		var data = new google.visualization.DataTable();
+              		data.addColumn('string', 'Type');
+              		data.addColumn('number', 'Duration (Seconds)');
+              		data.addRows([
+			        	['Fall', Months[8][1]+ Months[9][1]+Months[10][1]],
+			        	['Winter', Months[11][1]+Months[0][1]+Months[1][1]],
+			        	['Spring', Months[2][1]+Months[3][1]+Months[4][1]],
+			        	['Summer', Months[5][1]+Months[6][1]+Months[7][1]]
+        			]);
+      				var options = {
+                    	'width':500,
+                    	'height':300};
+      				var chart = new google.visualization.PieChart(
+        				document.getElementById('Seasonal'));
+					chart.draw(data, options);
+				}
 			}
-		};
-		xmlhttp.open("GET", 'https://byuan45.github.io/result.json', true);
-		xmlhttp.send();
-		</script>
-    
-
-
-   
-
+			};
+			xmlhttp.open("GET", 'https://byuan45.github.io/result.json', true);
+			xmlhttp.send();
+			</script>
 
 	</body>
